# cargo-cooldown

./: CHANGELOG.md  Cargo.toml  README.md  cooldown.toml
.github/workflows/: release.sh  release.yml  rust-ci.yml
benches/: crates_io_cooldown.rs
docs/: configuration.md  migration-guide.md  overview.md  registries.md  releasing.md  resolution-flow.md  testing.md  troubleshooting.md
examples/: .gitignore  README.md  run-crates-io-benchmark.sh  run-crates-io-large-60d-benchmark.sh  run-crates-io-smoke.sh  smoke-test-crates-io.sh  test.sh
examples/crates-io-large-benchmark-workspace/: Cargo.toml  cooldown.toml
examples/crates-io-large-benchmark-workspace/src/: main.rs
examples/crates-io-smoke-workspace/: Cargo.toml  cooldown.toml
examples/crates-io-smoke-workspace/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/fixtures/deterministic/: Cargo.lock.allowlist  Cargo.lock.expected  Cargo.lock.hot  cooldown-allowlist.toml
examples/fixtures/deterministic/cache/itoa/: 1.0.17  1.0.18  _list
examples/fixtures/deterministic/cache/memchr/: 2.7.6  2.8.0  _list
examples/fixtures/deterministic/workspace/: Cargo.toml
examples/fixtures/deterministic/workspace/src/: main.rs
src/: allow_rules.rs  cache.rs  config.rs  executor.rs  init.rs  isolation.rs  lockfile.rs  main.rs  metadata.rs  project.rs  registry.rs  resolution_state.rs  resolver.rs  ui.rs
tests/: cli.rs  init.rs  integration.rs
