[package]
name = "cargo-cooldown"
version = "0.3.1"
edition = "2024"
rust-version = "1.91.1"
description = "Cargo wrapper that enforces a cooldown window for freshly published registry crates for improved supply chain security."
keywords = ["cargo", "cooldown"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/dertin/cargo-cooldown"
authors = ["Guillermo Céspedes Tabárez <dev.dertin@gmail.com>"]
license = "Apache-2.0 OR MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.'cfg(windows)']
pkg-fmt = "zip"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23.1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "gzip", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tame-index = "0.26.3"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
semver = "1"
clap = { version = "4.6.1", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
indicatif = "0.18.4"
tempfile = "3"

[dev-dependencies]
assert_fs = "1"
flate2 = "1"
sha2 = "0.11"
tar = "0.4.45"

[[bench]]
name = "crates_io_cooldown"
harness = false

[profile.release]
codegen-units = 1
lto = true
