[package]
name = "cooldown-crates-io-smoke-workspace"
version = "0.1.0"
edition = "2024"
authors = ["cargo-cooldown maintainers"]
description = "Small crates.io-backed workspace used by smoke scripts and the default benchmark"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
