[package]
name = "cooldown-demo"
version = "0.1.0"
edition = "2021"
authors = ["cargo-cooldown maintainers"]
description = "Sample workspace used to exercise cargo-cooldown locally"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
